fix right-alignment on menu

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -10,6 +10,9 @@
         //     height: .4rem;
         // }
     }
+    .page-link.resume {
+        margin-right: 20px;
+    }
 }
 
 #menu-line {
